VE: MDEV-573. Fix table background color when overflow.

--- a/src/main/amp/web/scripts/vieweditor/styles/styles.css
+++ b/src/main/amp/web/scripts/vieweditor/styles/styles.css
@@ -580,11 +580,13 @@ h1 {
 }
 
 
-media="screen"
-.table-striped>tbody>tr:nth-child(even)>td, .table-striped>tbody>tr:nth-child(even)>th {
+.table-striped>tbody>tr:nth-child(even)>td {
 background-color: #ffffff;
 }
 
+.table-striped>thead>tr:first-child>th {
+background-color: #ffffff;
+}
 
 .dropdown-submenu{position:relative;}
 .dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
